RESOLVED FIXED48551
HTMLDocument::isFrameSet() should not depend on renderer
https://bugs.webkit.org/show_bug.cgi?id=48551
Summary HTMLDocument::isFrameSet() should not depend on renderer
Alexey Proskuryakov
Reported 2010-10-28 12:53:55 PDT
It's confusing to have both DOM and renderer checks in one function. There are only two callers of Document::isFrameSet(): 1. LegacyWebArchive::createFromSelection(). It doesn't seem to depend on render tree at all. 2. FrameLoader::shouldScrollToAnchor(). Returning true from Document::isFrameSet() means that we won't scroll, which seems like a good idea if there's no renderer.
Attachments
proposed patch (1.89 KB, patch)
2010-10-28 13:13 PDT, Alexey Proskuryakov
mitz: review+
Alexey Proskuryakov
Comment 1 2010-10-28 13:12:36 PDT
The check has been there since the method was added in <http://trac.webkit.org/changeset/1564>.
Alexey Proskuryakov
Comment 2 2010-10-28 13:13:11 PDT
Created attachment 72222 [details] proposed patch
Alexey Proskuryakov
Comment 3 2010-10-28 13:36:17 PDT
Note You need to log in before you can comment on or make changes to this bug.