        Reviewed by Dan Bernstein.

https://bugs.webkit.org/show_bug.cgi?id=48551
        HTMLDocument::isFrameSet() should not depend on renderer

        No change in functionality, so no new tests.

        * html/HTMLDocument.cpp: (WebCore::HTMLDocument::isFrameSet): Omit the check for renderer.

        * rendering/RenderLayer.h: Removed unneeded includes and forward declarations.



Canonical link: https://commits.webkit.org/61316@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70804 268f45cc-cd09-0410-ab3c-d52691b4dbfc